# ckanext-oidc-pkce

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  test.ini
.github/workflows/: release.yml  test.yml
ckanext/oidc_pkce/: config.py  config_declaration.yaml  helpers.py  interfaces.py  plugin.py  signals.py  utils.py  views.py
ckanext/oidc_pkce/assets/: script.js  webassets.yml
ckanext/oidc_pkce/templates/user/: login.html
ckanext/oidc_pkce/tests/: conftest.py  test_plugin.py  test_utils.py
