[metadata]
name = ckanext-oidc-pkce
version = 0.2.0
description = CKAN OIDC authenticator with PKCE flow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-oidc-pkce
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN, Okta, oidc, pkce, authentication

[options]
packages = find:
namespace_packages = ckanext
install_requires =
                 typing_extensions
include_package_data = True

[options.entry_points]
ckan.plugins =
             oidc_pkce = ckanext.oidc_pkce.plugin:OidcPkcePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
test =
     pytest-factoryboy

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/oidc_pkce/i18n/ckanext-oidc_pkce.pot
width = 80

[init_catalog]
domain = ckanext-oidc_pkce
input_file = ckanext/oidc_pkce/i18n/ckanext-oidc_pkce.pot
output_dir = ckanext/oidc_pkce/i18n

[update_catalog]
domain = ckanext-oidc_pkce
input_file = ckanext/oidc_pkce/i18n/ckanext-oidc_pkce.pot
output_dir = ckanext/oidc_pkce/i18n
previous = true

[compile_catalog]
domain = ckanext-oidc_pkce
directory = ckanext/oidc_pkce/i18n
statistics = true
